--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-linkedin-oauth2": "^2.0.0"
   }
 }
