--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
@@ -25,12 +23,15 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-linkedin-oauth2": "^2.0.0"
+    "passport-linkedin-oauth2": "^2.0.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-toastify": "^9.0.1"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
-    "colors": "^1.4.0",
     "nodemon": "^2.0.15"
   },
   "repository": {
