--- a/app/package.json
+++ b/app/package.json
@@ -19,14 +19,16 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "passport": "^0.5.2",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-toastify": "^9.0.1"
+    "react-hook-form": "^7.33.1",
+    "react-toastify": "^9.0.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "colors": "^1.4.0",
