--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.6",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
@@ -28,6 +29,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.33.1",
     "react-toastify": "^9.0.1",
+    "swr": "^1.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
