--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.6",
@@ -33,6 +34,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "cypress": "^10.3.1",
     "colors": "^1.4.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
