--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.6",
@@ -34,10 +35,11 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "cypress": "^10.3.1",
     "colors": "^1.4.0",
+    "cypress": "^10.3.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.15"
   },
   "repository": {
