--- a/app/package.json
+++ b/app/package.json
@@ -23,13 +23,14 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "next": "^13.1.6",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-linkedin-oauth2": "^2.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-toastify": "^9.1.1",
     "swr": "^1.3.0",
@@ -39,7 +40,7 @@
     "colors": "^1.4.0",
     "cypress": "^10.3.1",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.1.6",
     "jest": "^28.1.3",
     "nodemon": "^2.0.15"
   },
