--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -33,15 +33,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-toastify": "^9.1.1",
-    "swr": "^1.3.0",
-    "yup": "^0.32.11"
+    "swr": "^2.0.4",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
-    "cypress": "^10.3.1",
-    "eslint": "8.13.0",
+    "cypress": "^12.7.0",
+    "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
-    "jest": "^28.1.3",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.15"
   },
   "repository": {
