--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "next": "^13.2.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-linkedin-oauth2": "^2.0.0",
