--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "yup": "^1.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "colors": "^1.4.0",
     "cypress": "^12.9.0",
     "eslint": "^8.34.0",
