--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.8.1",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
