--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "yup": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "colors": "^1.4.0",
@@ -50,7 +51,10 @@
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "jest": "^29.4.3",
-    "nodemon": "^2.0.15"
+    "jest-environment-jsdom": "^29.5.0",
+    "node-fetch": "^3.3.1",
+    "nodemon": "^2.0.15",
+    "whatwg-fetch": "^3.6.2"
   },
   "repository": {
     "type": "git",
