--- a/app/package.json
+++ b/app/package.json
@@ -45,13 +45,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.9",
+    "@types/react": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "colors": "^1.4.0",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.13",
+    "eslint-plugin-typescript": "^0.14.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.1",
+    "typescript": "^5.1.6",
     "whatwg-fetch": "^3.6.17"
   },
   "repository": {
