--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,3 +1,28 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"]
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "next/babel",
+        "next/core-web-vitals"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "react"
+    ],
+    "rules": {
+      "indent":[
+        "error",
+        2
+      ]
+    }
 }
