refactor the module import to use module name mapper

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["next/babel", "@babel/preset-typescript"],
-    "plugins": []
+    "plugins": ["@babel/plugin-transform-runtime"]
 }
