--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@jest/types": "^29.6.3",
     "@types/node": "^20.6.5",
     "@types/react": "^18.2.22",
     "bcrypt": "^5.1.1",
@@ -47,6 +48,7 @@
     "yup": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
